# ML-TestTask

./: .gitignore  README.md
MFPipeTest/: CMakeLists.txt  IoInterface.hpp  MFPipe.h  MFPipeImpl.cpp  MFPipeImpl.h  MFTypes.h  unittest_mfpipe.cpp
MFPipeTest/pipe/: IoPipe.cpp  IoPipe.hpp  PipeParser.cpp  PipeParser.hpp  PipeReader.cpp  PipeReader.hpp  PipeWriter.cpp  PipeWriter.hpp  UnixIoPipe.cpp  UnixIoPipe.hpp  WinIoPipe.cpp  WinIoPipe.hpp
MFPipeTest/tests/: Parser.hpp  Pipe.hpp  Udp.hpp
MFPipeTest/udp/: UnixIoUdp.cpp  UnixIoUdp.hpp  WinIoUdp.cpp  WinIoUdp.hpp
